<resources>
    <string name="app_name">Polled</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>

    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="banned_message">You are banned from Polled</string>
    <string name="banned_reason">Reason: </string>
    <string name="banned_username">Username: </string>
    <string name="appeal_text">Appeal ban</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="translate">Translate</string>
    <string name="see_original">See original</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="edited">Edited</string>
    <string name="read_more">Read more</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="followers_count">%1$d Followers</string>
    <string name="following_count">%1$d Following</string>
    <string name="posts_count">%1$d Posts</string>

    <string name="about">About</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>


    <string name="login_message">You have to login to use Polled</string>
    <string name="read_less">Read less</string>
    <string name="showFullPost">Show full post</string>
    <string name="message_hint_1">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="poll_title_hint_1">How are you?</string>
    <string name="add_poll_option">Add option</string>
    <string name="multiple_choice">Allow multiple choice</string>
    <string name="post_message">New post</string>
    <string name="message_text">Message:</string>
    <string name="pollTitleText">Poll title (optional): </string>

    <string name="poll_option_hint">Option %1$d</string>
    <string name="message_error">Message is required</string>
    <string name="option_error">Poll option cannot be empty</string>
    <string name="reply_hint">Type your comment...</string>
    <string name="create_account_message">Create a new account</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_label">Username:</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="no_bio">You don\'t have a bio yet</string>
    <string name="follow_button">Follow</string>
    <string name="viewingProfileOf">Profile page of %s</string>
    <string name="no_bio_user">This user does not have a bio yet</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="rate_limit_exceeded">Rate limit exceeded, you can only post once per minute</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string name="commentReply">Replying to %s</string>
    <string name="private_post">Private</string>
    <string name="unlisted_post">Unlisted</string>
    <string name="followers_post">Followers only</string>
    <string name="friends_post">Friends only</string>
    <string name="autoTranslatePosts">Auto translate posts (beta)</string>
    <string name="deleted_comment">This message got deleted</string>
    <string name="deleted_message">deleted this message</string>
    <string name="follow_notification_title">%s is now following you</string>
    <string name="unfollow_notification_title">%s is no longer following you</string>
    <string name="like_notification_title">Someone liked your post</string>
    <string name="commented_notification_title">%s commented on your post</string>
    <string name="mention_notification_title">%s mentioned you in their post</string>
    <string name="voted_notification_title">%s voted on your post</string>
    <string name="new_post_notification_title">Someone you follow just posted a new post</string>
    <string name="follow_notification_message">Click to go to the profile of %s</string>
    <string name="like_notification_message">%s liked your post</string>
    <string name="mention_notification_message">%s mentioned you in a post</string>
    <string name="voted_notification_message">%s voted on your poll</string>
    <string name="posted_notification_message">"%s posted: </string>
    <string name="report_sent">Report sent</string>
    <string name="report_not_sent">Report not sent</string>
    <string name="report_sent_message">Your report has been sent to the moderators and is now under review.</string>
    <string name="report_sent_error">An error occurred while sending your report. Please try again later.</string>
    <string name="report_post">Report post</string>
    <string name="report_post_message">Please enter a reason for reporting the post:</string>
    <string name="report_reason">Enter reason…</string>
    <string name="retry">Retry</string>
    <string name="new_version_available">New app version availible</string>
    <string name="new_version_message">There is a new app version availible(V%s).</string>
    <string name="download">Download and Install</string>
    <string name="checkUpdates">Check for updates</string>
    <string name="no_update_available">No update availible</string>
    <string name="autoUpdate">Auto check for updates</string>
    <string name="upload_image">Upload image</string>
    <string name="general">General:</string>
    <string name="account">Account:</string>
    <string name="appearance">Appearance:</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="use_device_settings">Use device settings</string>
    <string name="use_device_settings_msg"><![CDATA[Match appearance to your device\'s Display & Brightness settings.]]></string>
    <string name="notifications">Notifications:</string>
    <string name="autoUpdate_msg">Automatically check for updates when opening the app</string>
    <string name="autoTranslate_msg">Automatically translate posts to the language of your device (beta)</string>
    <string name="sendNotifications">Send notifications</string>
    <string name="sendNotifications_msg">Send push notifications to your device about follows, comments, likes, etc</string>
    <string name="app">App:</string>
    <string name="no_messages">No messages yet</string>
    <string name="send_hint">Send a message...</string>
    <string name="app_version">App version: %s</string>
    <string name="app_build">App build: %s</string>
</resources>