<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifications_icon"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/post_icon"
        android:title="@string/post"
        app:itemIconSize="36dp" /> <!-- Make this one bigger -->

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/dm_icon"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />
</menu>
