<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@null"
    android:background="@null"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/translatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_translate"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/translate"
            android:textColor="?attr/android:textColorPrimary"
            android:textSize="18sp" /> <!-- Increased padding here -->

        <TextView
            android:id="@+id/sharePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_share"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/share"
            android:textColor="?attr/android:textColorPrimary"
            android:textSize="18sp" /> <!-- Increased padding here -->

        <TextView
            android:id="@+id/editPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/edit"
            android:textColor="?attr/android:textColorPrimary"
            android:textSize="18sp" /> <!-- Increased padding here -->

        <TextView
            android:id="@+id/deletePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_delete"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" /> <!-- Increased padding here -->

        <TextView
            android:id="@+id/reportPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_report"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/report"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" /> <!-- Increased padding here -->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
