<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/postFragment"
    tools:context=".ui.post.PostFragment">

    <View
        android:id="@+id/noInternetBanner"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/holo_red_dark"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noInternetWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/noInternet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_message"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColor"
        app:layout_constraintBottom_toTopOf="@+id/messageInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noInternetWarning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messageText"
        android:text="@string/message_text"
        android:textColor="?android:attr/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/messageInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/post_input"
        android:hint="@string/message_hint_1"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noInternetWarning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pollTitleText"
        android:text="@string/pollTitleText"
        android:textColor="?android:attr/textColor"
        android:textSize="14sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/messageInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/pollTitleInput"
        android:background="@drawable/post_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:hint="@string/poll_title_hint_1"
        android:textAlignment="center"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/pollTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"

        app:layout_constraintBottom_toTopOf="@+id/multipleChoiceCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pollTitleInput">

        <LinearLayout
            android:id="@+id/pollOptionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>



    <CheckBox
        android:id="@+id/multipleChoiceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/multiple_choice"
        app:layout_constraintBottom_toTopOf="@+id/postVisibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <!-- Spinner (Dropdown) -->
    <Spinner
        android:id="@+id/postVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"

        android:spinnerMode="dropdown"
        android:dropDownWidth="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/postButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/addPollOptionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_secondary"
            android:text="@string/add_poll_option"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColor"
            android:textSize="16sp"
            app:backgroundTint="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_secondary"
            android:text="@string/upload_image"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColor"
            android:textSize="16sp"
            app:backgroundTint="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addPollOptionButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addImageView"
        android:visibility="gone"/>


    <Button
        android:id="@+id/postButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:text="@string/post"
        android:textColor="@color/text_inverted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>