<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/noInternetBanner"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/holo_red_dark"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noInternetWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/noInternet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- SwipeRefreshLayout for pull-to-refresh gesture -->




    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout

        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="45dp"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timelineRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/banned_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/post_item"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/banned_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banned_message"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/banned_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/banned_reason"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/banned_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banned_username"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/appealBanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/appeal_text"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>